--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.11.3"
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "bootstrap-icons": "^1.11.3",
+        "jquery": "^3.7.1",
+        "jquery.easing": "^1.4.1"
     }
 }
