--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
