--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,12 @@
     "client": "file:",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
-    "next": "^15.1.6",
+    "next": "^19.0.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-avatar": "^5.0.3",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@types/node": "^20",
