--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,12 @@
     "client": "file:",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
+    "react-slider": "^2.0.6",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
