--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,8 @@
         "bootstrap-icons": "^1.11.3",
         "jquery": "^3.7.1",
         "jquery.easing": "^1.4.1",
-        "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.16.1",
-        "toastr": "^2.1.4"
+        "toastr": "^2.1.4",
+        "tom-select": "^2.4.3"
     }
 }
