add config momo

--- a/server/.env.example
+++ b/server/.env.example
@@ -61,3 +61,13 @@ FRONTEND_URL=http://localhost:3000   # Đường dẫn đến website Frontend (
 
 # Dường dẫn chấp nhận CSRF đến từ Frontend
 SANCTUM_STATEFUL_DOMAINS="${FRONTEND_URL}"
+
+# CẤU HÌNH MOMO (quan trọng)
+# ----------------------------------------
+# MOMO_PARTNER_CODE=                                               # (Không điền tự động lấy dữ liệu test) Mã đối tác (partner code) do Momo cấp cho bạn khi đăng ký tích hợp.
+# MOMO_ACCESS_KEY=                                                 # (Không điền tự động lấy dữ liệu test) Access Key được Momo cung cấp, dùng để xác thực API.
+# MOMO_SECRET_KEY=                                                 # (Không điền tự động lấy dữ liệu test) Secret Key dùng để mã hóa và xác thực dữ liệu giữa bạn và Momo.
+# MOMO_ENDPOINT=                                                   # (Không điền tự động lấy dữ liệu test) URL của cổng thanh toán Momo (đây là môi trường test).
+MOMO_IPN_URL=https://your-domain.com/api/v1/payment/momo/ipn       # URL webhook để Momo gửi thông báo khi giao dịch hoàn thành.
+MOMO_REDIRECT_URL=https://your-frontend.com/payment-result         # URL trang web của bạn nơi người dùng sẽ được chuyển hướng sau khi thanh toán.
+# ----------------------------------------
