--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
