--- a/server/composer.json
+++ b/server/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.16",
         "yajra/laravel-datatables": "^10.0",
         "yajra/laravel-datatables-oracle": "10.3.1"
     },
