--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-slider": "^2.0.6",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
