--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
         "bootstrap-icons": "^1.11.3",
+        "chart.js": "^4.4.8",
         "jquery": "^3.7.1",
         "jquery.easing": "^1.4.1",
         "sweetalert2": "^11.16.1",
