--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-slider": "^2.0.6",
     "sweetalert2": "^11.17.2",
