Feat: Login/Register with Google

--- a/server/.env.example
+++ b/server/.env.example
@@ -72,3 +72,9 @@ SANCTUM_STATEFUL_DOMAINS="${FRONTEND_URL}"
 MOMO_IPN_URL="${APP_URL}/api/v1/orders/payment/momo/ipn"           # (KHÔNG CHỈNH) URL webhook để Momo gửi thông báo khi giao dịch hoàn thành.
 MOMO_REDIRECT_URL=https://your-frontend.com/payment-result         # (FE CHỈNH CÁI NÀY) URL trang web của bạn nơi người dùng sẽ được chuyển hướng sau khi thanh toán.
 # ----------------------------------------
+
+# CẤU HÌNH ĐĂNG NHẬP GOOGLE 
+GOOGLE_CLIENT_ID=                                                       # Google Cloud Console - ID - Lấy từ https://console.cloud.google.com/
+GOOGLE_CLIENT_SECRET=                                                   # Google Cloud Console - SECRET - Lấy từ https://console.cloud.google.com/
+GOOGLE_REDIRECT_URI="${APP_URL}/api/v1/auth/google/callback"            # (KHÔNG CHỈNH) URL webhook để Google gửi dữ liệu.
+GOOGLE_REDIRECT_URL_TO_FRONTEND="${FRONTEND_URL}/auth/google-callback"  # Đường dẫn để redirect người dùng sau khi xác thực Google.
