--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slider": "^1.3.6",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
