--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.6",
+    "@tanstack/react-query": "^5.71.1",
     "client": "file:",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "next": "^15.1.7",
@@ -21,7 +24,9 @@
     "react-hot-toast": "^2.5.2",
     "react-slider": "^2.0.6",
     "sweetalert2": "^11.17.2",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "tailwind-merge": "^3.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
