--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.1.0",
     "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
