--- a/server/composer.json
+++ b/server/composer.json
@@ -17,7 +17,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "*",
+        "maatwebsite/excel": "3.1.48",
         "spatie/laravel-permission": "^6.16",
         "yajra/laravel-datatables": "^10.0",
         "yajra/laravel-datatables-oracle": "10.3.1"
